; ModuleID = '/home/carl/AnghaBench/RetroArch/libretro-common/compat/extr_compat_ifaddrs.c_interpretAddrs.c'
source_filename = "/home/carl/AnghaBench/RetroArch/libretro-common/compat/extr_compat_ifaddrs.c_interpretAddrs.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32, %struct.nlmsghdr*, %struct.TYPE_3__* }
%struct.nlmsghdr = type { i64, i64, i64 }
%struct.ifaddrs = type { i32 }

@NLMSG_DONE = common dso_local global i64 0, align 8
@RTM_NEWADDR = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32, %struct.TYPE_3__*, %struct.ifaddrs**, i32)* @interpretAddrs to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @interpretAddrs(i32 %0, %struct.TYPE_3__* %1, %struct.ifaddrs** %2, i32 %3) #0 {
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca %struct.TYPE_3__*, align 8
  %8 = alloca %struct.ifaddrs**, align 8
  %9 = alloca i32, align 4
  %10 = alloca i64, align 8
  %11 = alloca %struct.nlmsghdr*, align 8
  %12 = alloca i32, align 4
  store i32 %0, i32* %6, align 4
  store %struct.TYPE_3__* %1, %struct.TYPE_3__** %7, align 8
  store %struct.ifaddrs** %2, %struct.ifaddrs*** %8, align 8
  store i32 %3, i32* %9, align 4
  %13 = call i64 (...) @getpid()
  store i64 %13, i64* %10, align 8
  br label %14

14:                                               ; preds = %70, %4
  %15 = load %struct.TYPE_3__*, %struct.TYPE_3__** %7, align 8
  %16 = icmp ne %struct.TYPE_3__* %15, null
  br i1 %16, label %17, label %74

17:                                               ; preds = %14
  store %struct.nlmsghdr* null, %struct.nlmsghdr** %11, align 8
  %18 = load %struct.TYPE_3__*, %struct.TYPE_3__** %7, align 8
  %19 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %18, i32 0, i32 0
  %20 = load i32, i32* %19, align 8
  store i32 %20, i32* %12, align 4
  %21 = load %struct.TYPE_3__*, %struct.TYPE_3__** %7, align 8
  %22 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %21, i32 0, i32 1
  %23 = load %struct.nlmsghdr*, %struct.nlmsghdr** %22, align 8
  store %struct.nlmsghdr* %23, %struct.nlmsghdr** %11, align 8
  br label %24

24:                                               ; preds = %65, %17
  %25 = load %struct.nlmsghdr*, %struct.nlmsghdr** %11, align 8
  %26 = load i32, i32* %12, align 4
  %27 = call i64 @NLMSG_OK(%struct.nlmsghdr* %25, i32 %26)
  %28 = icmp ne i64 %27, 0
  br i1 %28, label %29, label %69

29:                                               ; preds = %24
  %30 = load %struct.nlmsghdr*, %struct.nlmsghdr** %11, align 8
  %31 = getelementptr inbounds %struct.nlmsghdr, %struct.nlmsghdr* %30, i32 0, i32 2
  %32 = load i64, i64* %31, align 8
  %33 = load i64, i64* %10, align 8
  %34 = icmp ne i64 %32, %33
  br i1 %34, label %42, label %35

35:                                               ; preds = %29
  %36 = load %struct.nlmsghdr*, %struct.nlmsghdr** %11, align 8
  %37 = getelementptr inbounds %struct.nlmsghdr, %struct.nlmsghdr* %36, i32 0, i32 1
  %38 = load i64, i64* %37, align 8
  %39 = trunc i64 %38 to i32
  %40 = load i32, i32* %6, align 4
  %41 = icmp ne i32 %39, %40
  br i1 %41, label %42, label %43

42:                                               ; preds = %35, %29
  br label %65

43:                                               ; preds = %35
  %44 = load %struct.nlmsghdr*, %struct.nlmsghdr** %11, align 8
  %45 = getelementptr inbounds %struct.nlmsghdr, %struct.nlmsghdr* %44, i32 0, i32 0
  %46 = load i64, i64* %45, align 8
  %47 = load i64, i64* @NLMSG_DONE, align 8
  %48 = icmp eq i64 %46, %47
  br i1 %48, label %49, label %50

49:                                               ; preds = %43
  br label %69

50:                                               ; preds = %43
  %51 = load %struct.nlmsghdr*, %struct.nlmsghdr** %11, align 8
  %52 = getelementptr inbounds %struct.nlmsghdr, %struct.nlmsghdr* %51, i32 0, i32 0
  %53 = load i64, i64* %52, align 8
  %54 = load i64, i64* @RTM_NEWADDR, align 8
  %55 = icmp eq i64 %53, %54
  br i1 %55, label %56, label %64

56:                                               ; preds = %50
  %57 = load %struct.nlmsghdr*, %struct.nlmsghdr** %11, align 8
  %58 = load %struct.ifaddrs**, %struct.ifaddrs*** %8, align 8
  %59 = load i32, i32* %9, align 4
  %60 = call i32 @interpretAddr(%struct.nlmsghdr* %57, %struct.ifaddrs** %58, i32 %59)
  %61 = icmp eq i32 %60, -1
  br i1 %61, label %62, label %63

62:                                               ; preds = %56
  store i32 -1, i32* %5, align 4
  br label %75

63:                                               ; preds = %56
  br label %64

64:                                               ; preds = %63, %50
  br label %65

65:                                               ; preds = %64, %42
  %66 = load %struct.nlmsghdr*, %struct.nlmsghdr** %11, align 8
  %67 = load i32, i32* %12, align 4
  %68 = call %struct.nlmsghdr* @NLMSG_NEXT(%struct.nlmsghdr* %66, i32 %67)
  store %struct.nlmsghdr* %68, %struct.nlmsghdr** %11, align 8
  br label %24

69:                                               ; preds = %49, %24
  br label %70

70:                                               ; preds = %69
  %71 = load %struct.TYPE_3__*, %struct.TYPE_3__** %7, align 8
  %72 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %71, i32 0, i32 2
  %73 = load %struct.TYPE_3__*, %struct.TYPE_3__** %72, align 8
  store %struct.TYPE_3__* %73, %struct.TYPE_3__** %7, align 8
  br label %14

74:                                               ; preds = %14
  store i32 0, i32* %5, align 4
  br label %75

75:                                               ; preds = %74, %62
  %76 = load i32, i32* %5, align 4
  ret i32 %76
}

declare dso_local i64 @getpid(...) #1

declare dso_local i64 @NLMSG_OK(%struct.nlmsghdr*, i32) #1

declare dso_local i32 @interpretAddr(%struct.nlmsghdr*, %struct.ifaddrs**, i32) #1

declare dso_local %struct.nlmsghdr* @NLMSG_NEXT(%struct.nlmsghdr*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
